Fix sizing and spacing issues

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -60,7 +60,8 @@
     }
 
     ul {
-        margin-top: 1vh;
+        margin-top: 0.50rem;
+        margin-bottom: 0.75rem;
     }
 
     .tag + .tag {
